Fixed sub-category size on mobile.

--- a/apps/light/src/clients/surlatable/landingpage/mothersday/styles/main.scss
+++ b/apps/light/src/clients/surlatable/landingpage/mothersday/styles/main.scss
@@ -904,6 +904,9 @@ body {
             }
             .sub-categories {
                 width: 200%;
+                .sub-category {
+                    width: 49%;
+                }
             }
         }
     }
